feat(dos): add public and private docs with auth button
